import { UUID } from "./utils";

export interface Floorplan {
  id: UUID;
  data?: any;  // Type TBD
}
