import { UUID } from './utils';

export interface Planner {
  id: UUID;
}

