@startuml

title ER diagram (Crow's Foot) (updated 2025-02-03)


' --- Entities ---
entity "User" as User {
    id: UUID <<key>>
    name: VARCHAR
    data: ?
}

entity "Calendar" as Calendar {
    id: UUID <<key>>
  
' ... Calendar specific attributes if needed
}


entity "Event" as Event {
    id: UUID <<key>>
    name: VARCHAR
    location_type: ENUM   
    start_time: TIMESTAMP
    end_time: TIMESTAMP
    recurrence: ?
}

entity "Course" as Course {
    course_code: VARCHAR
    description: VARCHAR
}

Course --> Course : prerequisite

entity "Task" as Task {
    id: UUID <<key>>
    description: TEXT
    location_type: ENUM  
    emergency_task: BOOLEAN
    needs_display: BOOLEAN
}

entity "Planner" as Planner {
    id: UUID <<key>>
  
' ... other planner attributes if needed
}

entity Location {
    id: UUID <<key>>
}

entity "OutdoorLocation" as OutdoorLocation {
    latitude: DOUBLE
    longitude: DOUBLE
}

entity "FloorplanLocation" as FloorplanLocation {
    x_coordinate: INT
    y_coordinate: INT
}

FloorplanLocation --|> Location: "is a"  
OutdoorLocation --|> Location: "is a"  


entity "Route" as Route {
    id: UUID <<key>>
    accessible: BOOLEAN
}

entity "RouteSegment" as RouteSegment {
    route_id: UUID <<key>> <<FK>>
    order: INT <<key>> <<FK>>
    transportation_mode: ENUM
    path: ?
}


entity "Room" as Room {
    id: UUID <<key>>
    number: VARCHAR
    type: VARCHAR
}

entity "Campus" as Campus {
    id: UUID <<key>>
    name: VARCHAR
}

entity "Building" as Building {
    id: UUID <<key>>
    name: VARCHAR
     polygon_shape: ?
    description: TEXT
    address: VARCHAR
    opening_hours: VARCHAR
}

entity "Floor" as Floor {
    id: UUID <<key>>
    number: INT
    is_wheelchair_accessible: BOOLEAN
    has_elevator_access: BOOLEAN
    has_ramp_access: BOOLEAN
}

entity "Floorplan" as Floorplan {
    id: UUID <<key>>
    data: ?
}


entity "POI" as POI {
    id: UUID <<key>>
    type: ENUM
    description: Text
}

entity "Weather" as Weather {
    id: UUID <<key>>
    date: DATE <<key>>
    data: ?
}
note right of Weather: Stores a rolling 7-day forecast\nfor the specified city.  Weather type\nindicates if it's daily summary or hourly.\nDate is the forecast date.



' --- Relationships ---
User "1" -- "1" Planner : "uses"
Calendar "1" -- "*" Event : aggregates
Calendar "*" -- "*" User 
Course --|> Event : "is a"  

Planner "1" -- "*" Task : "aggregates"

Event "*" -- "1" Location : "at"
Task "*" -- "1" Location : "at"
Route "1" -- "*" RouteSegment : aggregates
RouteSegment "1" -- "1" Location : "start location"
RouteSegment "1" -- "1" Location : "end location"


Campus "1" -- "*" Building
Building "1" -- "*" Floor 
Floor "1" -- "*" Room


Building "1" -- "1" Location : "at"
POI "*" -- "1" Location: "at"
Room "1" -- "1" FloorplanLocation : "at" 
Floor "1" -- "1" Floorplan
Floorplan "1" -- "*" FloorplanLocation : "contains"


@enduml